# Parallel-Calculations

./: .gitignore
Lab1/: ПО Лаб1 КН-32 Долженков Єгор.docx
Lab1/lab1_proj/: Source.cpp  lab1_proj.sln  lab1_proj.vcxproj
Lab2/: graphics.py  test_results.csv  ПО Лаб2 КН-32 Долженков Єгор.docx
Lab2/po_lab2/: Source.cpp  po_lab2.sln  po_lab2.vcxproj
Lab3/: ПО Лаб3 КН-32 Долженков Єгор.docx
Lab3/Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Source.cpp  TaskQueue.cpp  TaskQueue.h  TaskStruct.h  ThreadPool.cpp  ThreadPool.h
Lab4/: CMakeLists.txt  run_all.bat  run_client_cpp.bat  run_client_py.bat  run_server.bat  ПО Лаб4 КН-32 Долженков Єгор.docx
Lab4/Client_CPP/: ApplicationProtocol.h  Client.cpp  Client.h  Client_CPP.sln  Client_CPP.vcxproj  Client_CPP.vcxproj.filters  EventHandler.cpp  EventHandler.h  Source.cpp
Lab4/Client_Python/: Client.py
Lab4/Server/: ClientHandler.cpp  ClientHandler.h  Server.cpp  Server.h  Server.sln  Server.vcxproj  Server.vcxproj.filters  Source.cpp  TaskHandler.cpp  TaskHandler.h
Lab5/: CMakeLists.txt  Source.cpp  locustfile.py  run_locust.bat  run_server.bat  ПО Лаб5 КН-32 Долженков Єгор.docx
Lab5/Server/: ClientSession.cpp  ClientSession.h  Server.cpp  Server.h
Lab5/ThreadPool/: TaskQueue.h  ThreadPool.cpp  ThreadPool.h
Lab5/pages/: index.html  page2.html
